tests/it/wire/snapshots/it__wire__openai_responses__encodes_url_attachments.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "body": {
    "include": [
      "reasoning.encrypted_content"
    ],
    "input": [
      {
        "content": [
          {
            "text": "Describe both attachments.",
            "type": "input_text"
          },
          {
            "detail": "high",
            "image_url": "https://example.com/cat.png",
            "type": "input_image"
          },
          {
            "file_url": "https://example.com/report.pdf",
            "filename": "report.pdf",
            "type": "input_file"
          }
        ],
        "role": "user"
      }
    ],
    "max_output_tokens": 128,
    "model": "gpt-5.6-luna-2026-04-01",
    "store": false,
    "stream": false
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "397"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "method": "POST",
  "path": "/v1/responses"
}
