tests/it/wire/snapshots/it__wire__openai_responses__ignores_a_stream_frame_that_is_not_json.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
[
  {
    "id": "resp_keepalive",
    "type": "started"
  },
  {
    "id": "msg_keepalive",
    "kind": {
      "type": "text"
    },
    "type": "content_block_start"
  },
  {
    "id": "msg_keepalive",
    "text": "Still here.",
    "type": "text_delta"
  },
  {
    "id": "msg_keepalive",
    "part": {
      "text": "Still here.",
      "type": "text"
    },
    "type": "content_block_end"
  },
  {
    "id": "msg_keepalive-item",
    "kind": {
      "kind": "openai.message",
      "type": "opaque"
    },
    "type": "content_block_start"
  },
  {
    "id": "msg_keepalive-item",
    "part": {
      "data": {
        "content": [
          {
            "text": "Still here.",
            "type": "output_text"
          }
        ],
        "id": "msg_keepalive",
        "role": "assistant",
        "status": "completed",
        "type": "message"
      },
      "kind": "openai.message",
      "type": "opaque"
    },
    "type": "content_block_end"
  },
  {
    "type": "usage",
    "usage": {
      "cache_read": 0,
      "cache_write": 0,
      "input": 0,
      "output": 0,
      "reasoning": 0
    }
  },
  {
    "response": {
      "content": [
        {
          "text": "Still here.",
          "type": "text"
        },
        {
          "data": {
            "content": [
              {
                "text": "Still here.",
                "type": "output_text"
              }
            ],
            "id": "msg_keepalive",
            "role": "assistant",
            "status": "completed",
            "type": "message"
          },
          "kind": "openai.message",
          "type": "opaque"
        }
      ],
      "finish_reason": "stop",
      "id": "resp_keepalive",
      "model": {
        "model": "gpt-5.6-luna",
        "provider": "openai"
      },
      "raw": {
        "id": "resp_keepalive",
        "output": [],
        "status": "completed"
      },
      "usage": {
        "cache_read": 0,
        "cache_write": 0,
        "input": 0,
        "output": 0,
        "reasoning": 0
      }
    },
    "type": "ended"
  }
]
