tests/it/wire/snapshots/it__wire__openai_responses__pins_the_count_tokens_body-2.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "model": {
    "model": "gpt-5.6-luna",
    "provider": "openai"
  },
  "tokens": 42
}
