tests/it/wire/snapshots/it__wire__openai_responses__pins_the_count_tokens_body.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "body": {
    "input": [
      {
        "content": [
          {
            "text": "Write one sentence.",
            "type": "input_text"
          }
        ],
        "role": "user"
      }
    ],
    "model": "gpt-5.6-luna-2026-04-01"
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "124"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "method": "POST",
  "path": "/v1/responses/input_tokens"
}
