tests/it/wire/snapshots/it__wire__openai_responses__preserves_the_raw_success_document.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "id": "resp_raw",
  "model": {
    "provider": "openai",
    "model": "gpt-5.6-luna"
  },
  "content": [
    {
      "type": "text",
      "text": "Sunny."
    },
    {
      "type": "opaque",
      "kind": "openai.message",
      "data": {
        "content": [
          {
            "text": "Sunny.",
            "type": "output_text"
          }
        ],
        "id": "msg_raw",
        "role": "assistant",
        "type": "message"
      }
    }
  ],
  "finish_reason": "stop",
  "usage": {
    "input": 5,
    "output": 2,
    "reasoning": 0,
    "cache_read": 0,
    "cache_write": 0
  },
  "raw": {
    "id": "resp_raw",
    "model": "gpt-5.6-luna-2026-04-01",
    "object": "response",
    "output": [
      {
        "id": "ws_1",
        "status": "completed",
        "type": "web_search_call"
      },
      {
        "content": [
          {
            "text": "Sunny.",
            "type": "output_text"
          }
        ],
        "id": "msg_raw",
        "role": "assistant",
        "type": "message"
      }
    ],
    "service_tier": "default",
    "status": "completed",
    "usage": {
      "input_tokens": 5,
      "input_tokens_details": {
        "cached_tokens": 0
      },
      "output_tokens": 2,
      "output_tokens_details": {
        "reasoning_tokens": 0
      },
      "total_tokens": 7
    }
  }
}
