tests/it/wire/snapshots/it__wire__openai_responses__rejects_a_count_response_with_the_wrong_object.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "kind": "response_decode",
  "message": "provider openai returned an input token count with object response",
  "provider": "openai",
  "retry": {
    "type": "safe"
  },
  "raw_data": {
    "input_tokens": 42,
    "object": "response"
  }
}
