tests/it/wire/snapshots/it__wire__openai_responses__rejects_an_unnamed_inline_document_before_dispatch.snap
---
source: tests/it/wire/openai_responses.rs
assertion_line: 562
expression: rendered
---
{
  "kind": "invalid_request",
  "message": "provider openai does not support an inline document without a file name",
  "provider": "openai",
  "provider_code": "unsupported_capability",
  "retry": {
    "type": "never"
  }
}
