tests/it/wire/snapshots/it__wire__openai_responses__rejects_audio_before_dispatch.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "kind": "invalid_request",
  "message": "provider openai does not support audio content",
  "provider": "openai",
  "provider_code": "unsupported_capability",
  "retry": {
    "type": "never"
  }
}
