tests/it/wire/snapshots/it__wire__openai_responses__replays_an_assistant_turn_with_its_own_items-2.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "content": [
    {
      "data": {
        "encrypted_content": "gAAAAAfirst-reasoning-state",
        "id": "rs_first",
        "summary": [],
        "type": "reasoning"
      },
      "kind": "openai.reasoning",
      "type": "opaque"
    },
    {
      "text": "Checking now.",
      "type": "text"
    },
    {
      "data": {
        "content": [
          {
            "annotations": [],
            "text": "Checking now.",
            "type": "output_text"
          }
        ],
        "id": "msg_interleaved",
        "role": "assistant",
        "status": "completed",
        "type": "message"
      },
      "kind": "openai.message",
      "type": "opaque"
    },
    {
      "data": {
        "encrypted_content": "gAAAAAsecond-reasoning-state",
        "id": "rs_second",
        "summary": [],
        "type": "reasoning"
      },
      "kind": "openai.reasoning",
      "type": "opaque"
    },
    {
      "id": "call_weather",
      "input": {
        "type": "function",
        "value": "{\"city\":\"Paris\"}"
      },
      "name": "get_weather",
      "provider_metadata": {
        "openai": {
          "item_id": "fc_interleaved"
        }
      },
      "type": "tool_call"
    }
  ],
  "finish_reason": "tool_call",
  "id": "resp_interleaved",
  "model": {
    "model": "gpt-5.6-luna",
    "provider": "openai"
  },
  "raw": {
    "id": "resp_interleaved",
    "model": "gpt-5.6-luna-2026-04-01",
    "object": "response",
    "output": [
      {
        "encrypted_content": "gAAAAAfirst-reasoning-state",
        "id": "rs_first",
        "summary": [],
        "type": "reasoning"
      },
      {
        "content": [
          {
            "annotations": [],
            "text": "Checking now.",
            "type": "output_text"
          }
        ],
        "id": "msg_interleaved",
        "role": "assistant",
        "status": "completed",
        "type": "message"
      },
      {
        "encrypted_content": "gAAAAAsecond-reasoning-state",
        "id": "rs_second",
        "summary": [],
        "type": "reasoning"
      },
      {
        "arguments": "{\"city\":\"Paris\"}",
        "call_id": "call_weather",
        "id": "fc_interleaved",
        "name": "get_weather",
        "status": "completed",
        "type": "function_call"
      }
    ],
    "status": "completed",
    "usage": {
      "input_tokens": 20,
      "input_tokens_details": {
        "cached_tokens": 0
      },
      "output_tokens": 9,
      "output_tokens_details": {
        "reasoning_tokens": 4
      },
      "total_tokens": 29
    }
  },
  "usage": {
    "cache_read": 0,
    "cache_write": 0,
    "input": 20,
    "output": 5,
    "reasoning": 4
  }
}
